# Multitopo

./: ReadMe.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  multitopo
src/DMCore/Arrangement/: Arrangement.cpp  Arrangement.h  Arrangement_main.cpp  Arrangement_topology.cpp  CellSuf.h  CellTet.h  Ctr2ArHandler.cpp  Ctr2ArHandler.h  Ctr2MMHandler.cpp  TagMapping.h
src/DMCore/GroupingManager/: GroupingManager.cpp  GroupingManager.h  GroupingManager_main.cpp
src/DMCore/LuCtr2Suf/: Ming_Readme.txt  config.h  global.cpp
src/DMCore/LuCtr2Suf/ContourHandler/: ContourHandler.h  ContourHandler_CtrGraph.cpp  ContourHandler_PartitionToFace.cpp  ContourHandler_PartitionToFace_CommonEdge.cpp  ContourHandler_PreProc.cpp  ContourHandler_PreProcCommonEdge.cpp  ContourHandler_PreProc_1RadialSet_Random.cpp  ContourHandler_Reader.cpp  ContourHandler_db.cpp  contour files.txt
src/DMCore/LuCtr2Suf/JuFair/: meshFair.cpp  meshFair.h
src/DMCore/LuCtr2Suf/Math/: mymath.cpp  mymath.h
src/DMCore/LuCtr2Suf/SpacePartitioner/: SpacePartitioner.cpp  SpacePartitioner.h  SpacePartitioner_CommonLine.cpp  SpacePartitioner_CtrGraph.cpp  SpacePartitioner_db.cpp
src/DMCore/Utility/: AlgoX.cpp  AlgoX.h  BigInt.cpp  BigInt.h  Graph.cpp  Graph.h  MVC.h  UnionFind_o.cpp  UnionFind_o.h  Utility.h  VolReader.h
src/MMCore/: Cell.h  LP_solver.h  MMLevelSet.cpp  MMLevelSet.h  MMLevelSet_Ray.cpp  MMmain.cpp  Mesh.h  ParaDP.cpp  ParaNewFunctions.cpp  ParallelArrangement.cpp  ParallelArrangement.h  TetMesh.cpp  TriMesh.cpp  UnionFind.cpp  UnionFind.h  Util.cpp  Util.h
src/MainProcess/: mainProc.cpp
src/Utility/: InfoStruct.h  a_geosur.cpp  a_geosur_display.cpp  a_geosur_interface.cpp  a_multisur.cpp  a_multisur.h  geo_curv.cpp  geo_curv.h  geo_curv_display.cpp  geo_sur.h  my_mesh.cpp  my_mesh.h  readers.cpp  readers.h  utility.h
(+51 files in other folders)
